--- a/grade_lookup/build.gradle
+++ b/grade_lookup/build.gradle
@@ -20,11 +20,21 @@ android {
 		sourceCompatibility JavaVersion.VERSION_1_8;
 		targetCompatibility JavaVersion.VERSION_1_8;
 	}
+	signingConfigs {
+		config {
+			storeFile file('./default.jks');
+			storePassword '123456';
+			keyAlias 'keruine';
+			keyPassword '123456';
+			v1SigningEnabled true;
+			v2SigningEnabled true;
+		}
+	}
 	defaultConfig {
 		ndk {
 			moduleName "yflib"
 			ldLibs "log"
-			abiFilters   'armeabi-v7a', 'x86', 'x86_64', 'arm64-v8a'
+			abiFilters 'armeabi-v7a', 'x86', 'x86_64', 'arm64-v8a'
 		}
 		applicationId 'com.sxau.soft.andsix';
 		minSdkVersion 19;
@@ -32,6 +42,7 @@ android {
 		versionCode 3;
 		versionName '3.0.1-山西农业大学';
 		testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+		signingConfig signingConfigs.config
 	}
 	buildTypes {
 		release {
@@ -40,12 +51,14 @@ android {
 			debuggable false;
 			jniDebuggable false;
 			proguardFiles getDefaultProguardFile('proguard-android.txt'), './prorule.pro'
+			signingConfig signingConfigs.config
 		}
 		debug {
 			minifyEnabled false;
 			debuggable true;
 			jniDebuggable false;
 			zipAlignEnabled true;
+			signingConfig signingConfigs.config
 		}
 	}
 	lintOptions {
@@ -64,9 +77,9 @@ dependencies {
 	implementation 'com.google.android.material:material:1.0.0'
 	implementation 'androidx.cardview:cardview:1.0.0'
 	implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-	implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+	implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 	implementation "androidx.core:core-ktx:1.1.0"
-	implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0"
+	implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
 	implementation('com.squareup.okhttp3:okhttp:4.0.1')
 	implementation('com.squareup.okio:okio:2.2.2')
 	implementation 'com.google.code.gson:gson:2.8.5'
